[metadata]
name = urlbreakdown
version = 0.1.1
author = James Bonifield
author_email = bonifield.tools@gmail.com
description = splits a URL into individual components, unescapes arguments, and performs light calculations for manual or automated analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonifield/URLBreakdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
